ajout lecture json + deb interface

--- a/Color Interface/index.html
+++ b/Color Interface/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
-    <script src="index.js"></script>
+    <title>Interface couleur</title>
+
 </head>
 <body>
-    <input type="color"></input>
+    <input id="colorRGB" type="color"></input>
+    <input id="brightness" type="range" min="0" max="255"></input>
+
+    <button id="validate">Appliquer les paramètres</button>
+
+    <script src="index.js"></script>
 </body>
 </html>
