--- a/Setting Interface/public/index.html
+++ b/Setting Interface/public/index.html
@@ -8,10 +8,12 @@
 
 </head>
 <body>
-    <input id="colorRGB" type="color"></input>
-    <input id="brightness" type="range" min="0" max="255"></input>
-
-    <button id="validate">Appliquer les paramètres</button>
+    <form action = "http://127.0.0.1:8081/process_post" method = "POST">
+        <input id="colorRGB" type="color" name="colorRGB"></input>
+        <input id="brightness" type="range" min="0" max="255" name="brightness"></input>
+        
+        <input type = "submit" value = "Submit">
+     </form>
 
     <script src="index.js"></script>
 </body>
