suppression de l'effet de clignotement valider

--- a/Setting Interface/public/index.html
+++ b/Setting Interface/public/index.html
@@ -8,13 +8,13 @@
 
 </head>
 <body>
-    <form action = "http://127.0.0.1:8081/process_post" method = "POST">
+    <form id="form-settings" action="http://127.0.0.1:8081/process_post" method="POST">
         <input id="colorRGB" type="color" name="colorRGB"></input>
         <input id="brightness" type="range" min="0" max="255" name="brightness"></input>
         
-        <input type = "submit" value = "Submit">
-     </form>
-
+        <input id="btn-validate" type ="submit" value ="Valider">
+    </form>
+    
     <script src="index.js"></script>
 </body>
 </html>
