ça marche de nouveau !

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <form id="form-settings" action="http://127.0.0.1:8081/process_post" method="POST">
+    <form id="form-settings" action="/process_post" method="POST">
         <input id="colorRGB" type="color" name="colorRGB"></input>
         <input id="brightness" type="range" min="0" max="255" name="brightness"></input>
         
