--- a/public/index.html
+++ b/public/index.html
@@ -5,31 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Illuminated Piano Interface</title>
 </head>
 
 <body>
-    <div>
-        <span>Couleur : </span>
-        <input id="colorRGB" type="color"></input>
-        <span id="span_RGB"></span>
-    </div>
 
-    <div>
-        <span>Blanc : </span>
-        <input id="colorW" type="range" min="0" max="255"></input>
-        <span id="span_W"></span>
-    </div>
 
-    <div>
-        <span>Luminosité : </span>
-        <input id="brightness" type="range" min="0" max="255"></input>
-        <span id="span_brightness"></span>
-    </div>
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <h1>LightKeys! 🎹</h1>
+    </header>
 
-    <div><button id="btn-validate">Valider</button></div>
+    <div class="container">
+
+        <div class="container">
+            <h2>Réglages</h2>
+
+            <div class="row mb-3">
+                <label for="colorRGB" class="col-sm-2 col-form-label">Couleur : </label>
+                <div class="col-sm-10">
+                    <input type="color" id="colorRGB">
+                    <span id="span_RGB"></span>
+                </div>
+            </div>
+
+            <div class="row mb-3">
+                <label for="colorW" class="col-sm-2 col-form-label">Blanc : </label>
+                <div class="col-sm-10">
+                    <span id="span_W"></span>
+                    <input type="range" class="form-range" min="0" max="255" id="colorW">
+                </div>
+            </div>
+
+            <div class="row mb-3">
+                <label for="brightness" class="col-sm-2 col-form-label">Luminosité : </label>
+                <div class="col-sm-10">
+                    <span id="span_brightness"></span>
+                    <input type="range" class="form-range" min="0" max="255" id="brightness">
+                </div>
+            </div>
+
+            <div><button type="button" id="btn-validate" class="btn btn-primary">Valider</button></div>
+
+        </div>
+
+        <div class="container">
+            <h2>Presets</h2>
+        </div>
+
+
+
+    </div>
 
     <script src="index.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
