--- a/public/index.html
+++ b/public/index.html
@@ -14,37 +14,48 @@
 
 <body>
 
-
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <h1>LightKeys! 🎹</h1>
     </header>
 
     <div class="container">
 
-        <div class="container">
+        <div class="row mb-5">
             <h2>Réglages</h2>
 
             <div class="row mb-3">
-                <label for="colorRGB" class="col-sm-2 col-form-label">Couleur : </label>
-                <div class="col-sm-10">
-                    <input type="color" id="colorRGB">
-                    <span id="span_RGB"></span>
+                <div class="col-sm-2">
+                    <label for="colorRGBRangeInput" class="col-sm-2 col-form-label text-nowrap">Couleur :</label>
+                </div>
+                <div class="col">
+                    <input type="color" id="colorRGBRangeInput">
+                </div>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" id="colorRGBTextInput">
                 </div>
             </div>
 
             <div class="row mb-3">
-                <label for="colorW" class="col-sm-2 col-form-label">Blanc : </label>
-                <div class="col-sm-10">
-                    <span id="span_W"></span>
-                    <input type="range" class="form-range" min="0" max="255" id="colorW">
+                <div class="col-sm-2">
+                    <label for="colorWRangeInput" class="col-sm-2 col-form-label text-nowrap">Blanc :</label>
+                </div>
+                <div class="col">
+                    <input type="range" class="form-range" min="0" max="255" id="colorWRangeInput">
+                </div>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" id="colorWTextInput">
                 </div>
             </div>
 
             <div class="row mb-3">
-                <label for="brightness" class="col-sm-2 col-form-label">Luminosité : </label>
-                <div class="col-sm-10">
-                    <span id="span_brightness"></span>
-                    <input type="range" class="form-range" min="0" max="255" id="brightness">
+                <div class="col-sm-2">
+                    <label for="brightnessRangeInput" class="col-sm-2 col-form-label text-nowrap">Luminosité :</label>
+                </div>
+                <div class="col">
+                    <input type="range" class="form-range" min="0" max="255" id="brightnessRangeInput">
+                </div>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control" id="brightnessTextInput">
                 </div>
             </div>
 
@@ -52,11 +63,10 @@
 
         </div>
 
-        <div class="container">
+        <div class="row">
             <h2>Presets</h2>
+            <div class="presetsList"></div>
         </div>
-
-
 
     </div>
 
